...
                            <tabBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="SPe-ad-QVw">
                                <rect key="frame" x="0.0" y="813" width="414" height="83"/>
                                <items>
                                    <tabBarItem title="My Cats" image="person.fill" catalog="system" selectedImage="person.fill" id="iXh-jg-zDB">
                                        <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </tabBarItem>
                                    <tabBarItem tag="1" title="Cat Breeds" image="list.dash" catalog="system" id="YAL-Tr-YC4">
                                        <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </tabBarItem>
                                </items>
                                <color key="barTintColor" red="0.34509803919999998" green="0.80000000000000004" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <userDefinedRuntimeAttributes>
...
                            <constraint firstItem="SPe-ad-QVw" firstAttribute="top" secondItem="3y5-Hh-YMW" secondAttribute="bottom" constant="1" id="pu6-sC-Qi2"/>
                            <constraint firstAttribute="bottom" secondItem="SPe-ad-QVw" secondAttribute="bottom" id="seu-GN-1iP"/>
                            <constraint firstAttribute="bottom" secondItem="SPe-ad-QVw" secondAttribute="bottom" symbolic="YES" id="yey-BH-Ogr"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="QNa-aW-Hbv"/>
                    </view>
                    <navigationItem key="navigationItem" title="Cat ID" largeTitleDisplayMode="always" id="7Hv-Fv-w9y">
                        <barButtonItem key="leftBarButtonItem" image="gear" catalog="system" id="G64-jJ-EIi">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6Uo-Ek-UfD">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="color" keyPath="unselectedItemTintColor">
                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </tabBar>
                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="g7N-eC-5J7">
                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
...
                                                <color key="barTintColor" red="0.34509803921568627" green="0.80000000000000004" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <textAttributes key="titleTextAttributes">
                                                    <fontDescription key="fontDescription" name="SFProRounded-Semibold" family="SF Pro Rounded" pointSize="20"/>
                                                </textAttributes>
                                                <items>
                                                    <navigationItem title="New Cat" id="oKK-UB-bR0">
                                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="OqO-HS-2ZA">
                                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <connections>
                                                                <action selector="cancelButton:" destination="83S-y9-SFp" id="6Xe-vx-8I1"/>
                                                            </connections>
                                                        </barButtonItem>
                                                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Done" style="done" id="VGP-Tz-T2E">
...
